--- a/interface/frontend/package.json
+++ b/interface/frontend/package.json
@@ -14,8 +14,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue-resource": "^1.3.4",
-    "vue": "^2.4.2"
+    "cornerstone-core": "^0.13.1",
+    "jquery": "^3.2.1",
+    "vue": "^2.4.2",
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
